--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ https://templatemo.com/tm-531-reflux
                             <div class="right-text">
                                 <h4>Hey welcome to my profile....</h4>
                                 <p>
-                                    Hello I am prem darji. I am study in information technology in GIT collage.<br> I am also good in web developement.
+                                    Hello I am prem darji. I am studying in information technology in GIT collage.<br> I am also good in web developement.
                                 </p>
                                 <div class="white-button">
                                     <a href="#">Read More</a>
@@ -160,7 +160,7 @@ https://templatemo.com/tm-531-reflux
             <h2>My Work</h2>
             <div class="line-dec"></div>
             <span
-              >Recently i do not have work in IT company</span
+              >Recently i do not work in any IT company </span
             >
             <br>
             
